changed the tools a bit

--- a/stat1/Stat_4.ipynb
+++ b/stat1/Stat_4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a6cfd5525068e6855769f05a68346fa16474b64d2e947bd215e18e0046edfa64"
+  "signature": "sha256:97be0996753aff0513ee9e22c1bbea4934036342ecdbdc0eaf0f7a884bb43967"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,11 +13,20 @@
      "collapsed": false,
      "input": [
       "from tools import hide, HTML\n",
-      "hide()\n"
+      "%pylab inline\n",
+      "%load_ext rpy2.ipython   \n",
+      "hide()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Populating the interactive namespace from numpy and matplotlib\n"
+       ]
+      },
       {
        "html": [
         "<script>\n",
@@ -25,8 +34,11 @@
         "function code_toggle() {\n",
         " if (code_show){\n",
         " $('div.input').hide();\n",
+        " $('div.output_prompt').hide();\n",
+        "\n",
         " } else {\n",
         " $('div.input').show();\n",
+        " $('div.output_prompt').show();\n",
         " }\n",
         " code_show = !code_show\n",
         "} \n",
@@ -39,13 +51,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 9,
        "text": [
-        "<IPython.core.display.HTML at 0xb5156a0c>"
+        "<IPython.core.display.HTML at 0xb51c246c>"
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -79,31 +91,137 @@
      "prompt_number": 15
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "45"
-     ],
-     "language": "python",
+     "cell_type": "heading",
+     "level": 3,
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 16,
-       "text": [
-        "45"
-       ]
-      }
-     ],
-     "prompt_number": 16
+     "source": [
+      "5.18 "
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "45545"
-     ],
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "5.25 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "5.32 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "5.33 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "5.44 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.5 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.8 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.12 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.17 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.23 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.24 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.31 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.40 "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "6.41"
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "optional: 5.29, 6.7, 6.11"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": [
