brought in some python stat packages

--- a/stat1/Stat_4.ipynb
+++ b/stat1/Stat_4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:97be0996753aff0513ee9e22c1bbea4934036342ecdbdc0eaf0f7a884bb43967"
+  "signature": "sha256:5d4bfbe517f288380831c8f3d93fe0bd9836e92856cbbae55f91b90f93f1506c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,7 +15,20 @@
       "from tools import hide, HTML\n",
       "%pylab inline\n",
       "%load_ext rpy2.ipython   \n",
-      "hide()"
+      "\n",
+      "import scipy.stats as stat\n",
+      " \n",
+      " \n",
+      "dnorm = stat.norm.pdf\n",
+      "pnorm = stat.norm.cdf\n",
+      "qnorm = stat.norm.ppf\n",
+      "rnorm = stat.norm.rvs\n",
+      " \n",
+      "dt = stat.t.pdf\n",
+      "pt = stat.t.cdf\n",
+      "qt = stat.t.ppf\n",
+      "rt = stat.t.rvs\n",
+      "hide() "
      ],
      "language": "python",
      "metadata": {},
@@ -24,7 +37,9 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Populating the interactive namespace from numpy and matplotlib\n"
+        "Populating the interactive namespace from numpy and matplotlib\n",
+        "The rpy2.ipython extension is already loaded. To reload it, use:\n",
+        "  %reload_ext rpy2.ipython\n"
        ]
       },
       {
@@ -51,13 +66,13 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 20,
        "text": [
-        "<IPython.core.display.HTML at 0xb51c246c>"
+        "<IPython.core.display.HTML at 0xb042618c>"
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -101,10 +116,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "print(25.9 - qt(0.975,49)*5.6/50**0.5, 25.9 + qt(0.975,49)*5.6/50**0.5)"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "24.3084976113 27.4915023887\n"
+       ]
+      }
+     ],
+     "prompt_number": 25
     },
     {
      "cell_type": "heading",
