--- a/stat1/Stat_4.ipynb
+++ b/stat1/Stat_4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5d4bfbe517f288380831c8f3d93fe0bd9836e92856cbbae55f91b90f93f1506c"
+  "signature": "sha256:276661ec7146da23bbb8c88f49ca4e904176ef154a99d9b4e7437a22e19dc4d6"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,7 +17,6 @@
       "%load_ext rpy2.ipython   \n",
       "\n",
       "import scipy.stats as stat\n",
-      " \n",
       " \n",
       "dnorm = stat.norm.pdf\n",
       "pnorm = stat.norm.cdf\n",
@@ -78,32 +77,24 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print (\"what's up\")\n",
       "HTML('<h1 style=\"color:blue\">$ \\\\frac y{y^2} = \\sigma$</h1>')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "what's up\n"
-       ]
-      },
-      {
        "html": [
         "<h1 style=\"color:blue\">$ \\frac y{y^2} = \\sigma$</h1>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 27,
        "text": [
-        "<IPython.core.display.HTML at 0xb517462c>"
+        "<IPython.core.display.HTML at 0xa9985f8c>"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 27
     },
     {
      "cell_type": "heading",
@@ -117,7 +108,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(25.9 - qt(0.975,49)*5.6/50**0.5, 25.9 + qt(0.975,49)*5.6/50**0.5)"
+      "print(25.9 - qt(0.975,49)*5.6/50**0.5,' --- ', 25.9 + qt(0.975,49)*5.6/50**0.5)"
      ],
      "language": "python",
      "metadata": {},
@@ -126,11 +117,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "24.3084976113 27.4915023887\n"
+        "24.3084976113  ---  27.4915023887\n"
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 26
     },
     {
      "cell_type": "heading",
