finished stat homework

--- a/stat1/Stat_4.ipynb
+++ b/stat1/Stat_4.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a84f6f5e3304e31234e9aa62b470dbcc21bf02c49fa2d10dff2d798b1a249fc3"
+  "signature": "sha256:5c9a01ba0bb100a175bbfb6ffd0008fe6275f45d5877cc18b31f8515ad1ed550"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -695,7 +695,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We can used a paired data strategy."
+      "We can use a paired data strategy. (?)"
      ]
     },
     {
@@ -707,12 +707,17 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "a.) I would say the Wilcoxon rank sum test because the data for the control group is not very normal.\n",
+      "\n",
+      "b.) In all three tests, there is some evidence for the null hypothesis. Therefore we cannot reject it.\n",
+      "\n",
+      "c.) Using the Wilcoxon rank sum test, we have a 95.2% confidence interval of (-12.89, 0.81).\n",
+      "\n",
+      "d.) Obviously it matters because all three tests have different answers. It would not be reasonable to always run all three tests. Each test has specific assumptions, and without paying attention to the assumptions, you can make faulty inferences."
+     ]
     },
     {
      "cell_type": "heading",
@@ -720,6 +725,44 @@
      "metadata": {},
      "source": [
       "6.40 "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "a.)\n",
+      "\n",
+      "$ n = 2 \\sigma^2 \\frac{(z_{\\alpha} +z_{\\beta})^2}{\\Delta^2}$"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "2* 25.5**2 *(qnorm(0.95)+ qnorm(0.90))**2/(100)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 99,
+       "text": [
+        "111.37283479543699"
+       ]
+      }
+     ],
+     "prompt_number": 99
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Apparently you will need a sample size of 112.\n",
+      "\n",
+      "b.) I used equal standard deviation. I assumed that they were normally distributed as well."
      ]
     },
     {
@@ -731,30 +774,17 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "40.91-32\n"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 94,
-       "text": [
-        "8.909999999999997"
-       ]
-      }
-     ],
-     "prompt_number": 94
+     "source": [
+      "hmmm... I'm kid of confused here then... but I guess we just simply change the numbers around a little:"
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "378.5-165.833"
+      "2* 25.5**2 *(qnorm(0.95)+ qnorm(0.99))**2/(100)"
      ],
      "language": "python",
      "metadata": {},
@@ -762,13 +792,20 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 79,
+       "prompt_number": 100,
        "text": [
-        "212.667"
+        "205.09458990609423"
        ]
       }
      ],
-     "prompt_number": 79
+     "prompt_number": 100
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "So we would need a sample size of 206."
+     ]
     }
    ],
    "metadata": {}
