--- a/stat1/Stat_4.ipynb
+++ b/stat1/Stat_4.ipynb
@@ -1,13 +1,21 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5c9a01ba0bb100a175bbfb6ffd0008fe6275f45d5877cc18b31f8515ad1ed550"
+  "signature": "sha256:181a9f2a9ff75c61d2e02ab004cacca930757fbab7672f1bbd15e7df230cb21e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Homework #4"
+     ]
+    },
     {
      "cell_type": "code",
      "collapsed": false,
@@ -208,7 +216,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "This p-value is more than $\\alpha = 0.05$, thus we reject the alternative hypothesis."
+      "This p-value is more than $\\alpha = 0.05$, thus we do not accept the alternative hypothesis."
      ]
     },
     {
@@ -393,7 +401,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "a.) $t = \\frac{\\bar {y_1} - \\bar {y_2}}{\\sqrt{\\frac {s_1^2}{n_1} + \\frac {s_2^2}{n_2}}}$"
+      "a.) Because the two variances are unequal, we must use the more complicated formula:\n",
+      "\n",
+      "$t = \\frac{\\bar {y_1} - \\bar {y_2}}{\\sqrt{\\frac {s_1^2}{n_1} + \\frac {s_2^2}{n_2}}}$"
      ]
     },
     {
@@ -653,34 +663,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "I think it's easiest just to generate a confidence interval on this. Using the same equations from problem 6.5, we have: "
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "s_p = ((20*16**2 + 25*7.48**2)/53)**0.5\n",
-      "print(8.91-qt(0.975,53)*s_p*(1/30 + 1/25)**0.5,'---',8.91+qt(0.975,53)*s_p*(1/30 + 1/25)**0.5)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "2.88619079736 --- 14.9338092026\n"
-       ]
-      }
-     ],
-     "prompt_number": 95
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "And what we notice here is that the 95% confidence interval does not contain zero, therefore with 95% confidence we can say that there is a difference between the reading rates of these two populations."
+      "Looking at the confidence interval provided, we notice that the 95% confidence interval does not contain zero, therefore with 95% confidence we can say that there is a difference between the reading rates of these two populations."
      ]
     },
     {
