--- a/AI/Final.ipynb
+++ b/AI/Final.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ce5ca195279a8e3b1a5a840fc81ca84a3bdd1d155881084df47d8b5c70fe8ad7"
+  "signature": "sha256:ffba1732ee1a6087f43e23f2394271d201c51919b48b5d677a5fa62e7d2ff111"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -48,7 +48,6 @@
       "<u>description of an ANN</u>\n",
       "\n",
       "Artificial Neural Networks or ANNs is an old subfield of Arificial Intelligence research that has recently been resurgent. ANNs attempt to mimic the actual biological mechanisms of a brain. It began in 1943 when Warren McCulloch and Walter Pitts published a paper on them. The human brain is made up of billions of nuerons. Neurons are connected to each other by synapses. Each neuron has hundreds if not thousands of synapses as inputs and thence their output is also connected to thousands of synapses. And in theory, the neuron fires when certain stimuli from the various inputs reaches a certain threshold. The computer model tries to copy this behavior. Every neuron will have a certain number of inputs, and if a certain criterion is reached, then the neuron will fire and send its output to other neurons in the net. \"\"\"\n",
-      "\n",
       "len(a.split())\n"
      ],
      "language": "python",
@@ -89,6 +88,10 @@
       "\n",
       "Questions of memory: how many rules can an ANN of a certain topology handle. As one of my papers stated. For simple boolean, you don't need a hidden layer. For more complicated boolean operators, you will need to have a hidden layer. One hidden layer also works for addition. However, to multiply you will need to have two hidden layers. But on top of this is the memory we are already familiar with, where we can put information into short term memory for later and fast retrieval.\n",
       "\n",
+      "chaining inputs and outputs so that's it can handle digits greater than one byte. I haven't figured out how to do this yet.\n",
+      "\n",
+      "\n",
+      "sigmoid function dopeness. you have to do discrete calculus rather than normal calculus. It was easiest to implentmeant this as floating point, so for expediances sake I have not worked on this further. \n",
       "\n",
       "\n",
       "<u>C versus Python</u>\n",
